--- a/app/views/shared/_admin_sidebar.html.erb
+++ b/app/views/shared/_admin_sidebar.html.erb
@@ -80,8 +80,9 @@
 
           <!-- Wysyłki -->
           <li>
-            <%= link_to admin_shipments_path, class: "group relative flex items-center gap-3 rounded-lg px-3 py-2 text-sm font-medium #{request.path.start_with?('/admin/shipments') ? 'bg-[#ecf3ff] text-[#465fff] dark:bg-[#465fff]/10 dark:text-[#7592ff]' : 'text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-white/5'}" do %>
-              <svg class="h-5 w-5 <%= request.path.start_with?('/admin/shipments') ? 'fill-[#465fff]' : 'fill-gray-500 group-hover:fill-gray-700 dark:fill-gray-400' %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <% is_active = request.path.start_with?('/admin/shipments') && (params[:type] == 'order' || params[:type].blank?) %>
+            <%= link_to admin_shipments_path(type: :order), class: "group relative flex items-center gap-3 rounded-lg px-3 py-2 text-sm font-medium #{is_active ? 'bg-[#ecf3ff] text-[#465fff] dark:bg-[#465fff]/10 dark:text-[#7592ff]' : 'text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-white/5'}" do %>
+              <svg class="h-5 w-5 <%= is_active ? 'fill-[#465fff]' : 'fill-gray-500 group-hover:fill-gray-700 dark:fill-gray-400' %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM19 17a2 2 0 11-4 0 2 2 0 014 0z"/>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M13 5H3v11h1.17a3.001 3.001 0 015.66 0h4.34a3.001 3.001 0 015.66 0H21v-5.59l-3-3.41H13V5zm0 2v3h3.59L18 8.17V7h-5z"/>
               </svg>
@@ -125,6 +126,18 @@
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M12 4.318c1.637-1.11 3.805-1.396 5.807-.525 2.4 1.044 3.943 3.64 3.943 6.427 0 3.47-2.35 6.606-4.874 8.96a27.1 27.1 0 01-4.582 3.508 1 1 0 01-.588 0 27.099 27.099 0 01-4.582-3.508C4.6 16.831 2.25 13.695 2.25 10.22c0-2.787 1.544-5.383 3.943-6.427 2.002-.871 4.17-.585 5.807.525zm0 14.7a25.1 25.1 0 003.626-2.767C18.033 14.077 20 11.367 20 10.22c0-2.054-1.122-3.924-2.807-4.656-1.441-.627-3.16-.398-4.368.728a1 1 0 01-1.65 0c-1.208-1.126-2.927-1.355-4.368-.728C5.122 6.296 4 8.166 4 10.22c0 1.147 1.967 3.857 4.374 6.031A25.1 25.1 0 0012 19.018z"/>
               </svg>
               <span>Wpłaty darczyńców</span>
+            <% end %>
+          </li>
+
+          <!-- Wysyłki -->
+          <li>
+            <% is_active = request.path.start_with?('/admin/shipments') && params[:type] == 'donation' %>
+            <%= link_to admin_shipments_path(type: :donation), class: "group relative flex items-center gap-3 rounded-lg px-3 py-2 text-sm font-medium #{is_active ? 'bg-[#ecf3ff] text-[#465fff] dark:bg-[#465fff]/10 dark:text-[#7592ff]' : 'text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-white/5'}" do %>
+              <svg class="h-5 w-5 <%= is_active ? 'fill-[#465fff]' : 'fill-gray-500 group-hover:fill-gray-700 dark:fill-gray-400' %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM19 17a2 2 0 11-4 0 2 2 0 014 0z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M13 5H3v11h1.17a3.001 3.001 0 015.66 0h4.34a3.001 3.001 0 015.66 0H21v-5.59l-3-3.41H13V5zm0 2v3h3.59L18 8.17V7h-5z"/>
+              </svg>
+              <span>Wysyłki</span>
             <% end %>
           </li>
         </ul>
